# vedtech

./: .gitignore  Pipfile  README.md  pyproject.toml  taskfile.yml
.github/workflows/: code_quality.yml
kanban/todo/: allow_any_title.md  more_requirements.md
src/: __init__.py
src/domain/: document.py  file_loader.py  test_document.py  test_file_loader.py
src/vedtech/: __init__.py  cli.py  default_templates.py
src/vedtech/domain/: document.py  file_loader.py  template.py
tests/: test_cli.py  test_document.py  test_file_loader.py  test_template_cases.py
