[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "Casper Weiss Bang", email = "c@cwb.dk"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A set of tools that enable one to have CI controlled RFC/ADR documents."
name = "vedtech"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/C0DK/vedtech"
Issues = "https://github.com/C0DK/vedtech/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Same as Black.
indent-width = 4
line-length = 88

target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  # we don't care for docstrings
  "D", # missing type on self.
  "ANN101",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/test_*.py" = ["S101", "ANN201"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "black",
    "pytest-pretty",
    "build",
    "setuptools",
    "coverage>=7.5.3",
    "pytest-cov>=5.0.0",
]
